force-app/main/default/objects/SEG_ExcepcionesCR__c/SEG_ExcepcionesCR__c.object-meta.xml
<CustomObject>
    <description>Junction object con plantillas (NO excepciones) de SEGMENTOS.</description>
    <label>Plantillas CR</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>ID Excepciones CR</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plantillas CR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>