force-app/main/default/objects/SEG_ExcepcionesCR__c/fields/SEG_ClasificacionRapida__c.field-meta.xml
<CustomField>
    <fullName>SEG_ClasificacionRapida__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clasificación Rápida</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SEG_ClasificacionRapida__c.CBK_Negocio__c</field>
            <operation>equals</operation>
            <value>Segmentos</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SEG_ClasificacionRapida__c</referenceTo>
    <relationshipLabel>Plantillas CR</relationshipLabel>
    <relationshipName>SEG_ClasificacionRapida</relationshipName>
    <type>Lookup</type>
</CustomField>