force-app/main/default/objects/SEG_ExcepcionesCR__c/fields/SEG_Excepciones__c.field-meta.xml
<CustomField>
    <fullName>SEG_Excepciones__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Excepciones</label>
    <referenceTo>SEG_Excepciones__c</referenceTo>
    <relationshipName>SEG_Excepciones</relationshipName>
    <type>Lookup</type>
</CustomField>