force-app/main/default/objects/SEG_ExcepcionesCR__c/fields/SEG_Inactivo__c.field-meta.xml
<CustomField>
    <fullName>SEG_Inactivo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactivo</label>
    <type>Checkbox</type>
</CustomField>